--- a/estilos.css
+++ b/estilos.css
@@ -1,26 +1,26 @@
 * {
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: "Yanone Kaffeesatz", sans-serif;
 }
 
-.contenedor_fecha{
-    display: flex; 
-    font-family: 'Pangolin', cursive;
-    font-size: 30px;
-    color: white;
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: rgb(6, 0, 7);
+.contenedor_fecha {
+  display: flex;
+  font-family: "Pangolin", cursive;
+  font-size: 30px;
+  color: white;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: rgb(6, 0, 7);
 }
 
-#diaSemana{
-    background-color: yellow;
-    padding-top: 5px;
+#diaSemana {
+  background-color: yellow;
+  padding-top: 5px;
 }
 
-#dia{
-    color: tomato;
-    padding-top: 5px;
+#dia {
+  color: tomato;
+  padding-top: 5px;
 }
 
-#mesLetra{
-    padding-top: 5px;
+#mesLetra {
+  padding-top: 5px;
 }
